--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 
   <section id="contact">
     <h2>Contact</h2>
-    <p>📧 Email me at <a href="josey6@gmail.com">josey6kmt@gmail.com</a></p>
+    <p>📧 Email me at <a href="mailto:josey6kmt@gmail.com">josey6kmt@gmail.com</a></p>
     <p>🔗 Connect with me on 
       <a href="https://github.com/devmediay6" target="_blank">GitHub</a> |
       <a href="https://linkedin.com/in/mediay6" target="_blank">LinkedIn</a>
@@ -105,5 +105,6 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
