--- a/index.html
+++ b/index.html
@@ -97,6 +97,10 @@
     </p>
   </section>
   </main>
+<section id="news">
+  <h2>📰 Global Tech News</h2>
+  <div id="news-container">Loading latest headlines...</div>
+</section>
 
   <footer>
     <p>&copy; 2025 Jose's World. Built with ❤️ and code.</p>
@@ -105,6 +109,7 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
