--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <div id="loader">
     <div class="spinner"></div>
-    <p class="loading-text">Welcome to My Jose's World...</p>
+    <p class="loading-text">Welcome to Jose's World...</p>
   </div>
  <nav class="navbar">
   <div class="nav-brand">Jose's World</div>
@@ -147,6 +147,7 @@
 
 </body>
 </html>
+
 
 
 
