--- a/index.html
+++ b/index.html
@@ -108,45 +108,60 @@
 
   <script src="script.js"></script>
   <script>
-  const apiKey = "5fa90ca2359a486796965c98c278e6ad"; // your existing key
-  const apiUrl = `https://newsapi.org/v2/top-headlines?category=technology&language=en&pageSize=6&apiKey=${apiKey}`;
-  const proxyUrl = `https://api.allorigins.win/get?url=${encodeURIComponent(apiUrl)}`;
+  <script>
+const apiKey = "5fa90ca2359a486796965c98c278e6ad"; // 🔑 Replace with your NewsAPI key
+const newsContainer = document.getElementById("news-container");
 
-  async function fetchTechNews() {
-    const newsContainer = document.getElementById("news-container");
-    newsContainer.textContent = "Loading latest tech headlines...";
+async function loadTechNews() {
+  newsContainer.innerHTML = "<p>Loading latest global tech news...</p>";
 
-    try {
-      const res = await fetch(proxyUrl);
-      const data = await res.json();
-      const newsData = JSON.parse(data.contents);
+  try {
+    const response = await fetch(
+      `https://newsapi.org/v2/top-headlines?category=technology&language=en&apiKey=${apiKey}`
+    );
+    const data = await response.json();
 
-      if (!newsData.articles || newsData.articles.length === 0) {
-        newsContainer.textContent = "No tech news available at the moment.";
-        return;
-      }
-
+    if (data.articles && data.articles.length > 0) {
       newsContainer.innerHTML = "";
-      newsData.articles.forEach(article => {
-        const div = document.createElement("div");
-        div.classList.add("news-item");
-        div.innerHTML = `
-          <h4><a href="${article.url}" target="_blank">${article.title}</a></h4>
-          <p>${article.source.name}</p>
-        `;
-        newsContainer.appendChild(div);
-      });
-    } catch (error) {
-      console.error("Error fetching tech news:", error);
-      newsContainer.textContent = "Unable to load news at this time.";
-    }
-  }
 
-  fetchTechNews();
+      data.articles.slice(0, 6).forEach((article) => {
+        const newsItem = document.createElement("div");
+        newsItem.classList.add("news-item");
+
+        const imageUrl = article.urlToImage || "https://via.placeholder.com/120x80?text=No+Image";
+
+        newsItem.innerHTML = `
+          <div class="news-image">
+            <img src="${imageUrl}" alt="News Image">
+          </div>
+          <div class="news-content">
+            <h4><a href="${article.url}" target="_blank" rel="noopener noreferrer">${article.title}</a></h4>
+            <p>${article.description || "No description available."}</p>
+          </div>
+        `;
+
+        newsContainer.appendChild(newsItem);
+      });
+    } else {
+      newsContainer.innerHTML = "<p>No tech news available at this moment.</p>";
+    }
+  } catch (error) {
+    console.error("Error fetching news:", error);
+    newsContainer.innerHTML = "<p>Unable to load news at this time.</p>";
+  }
+}
+
+// 🚀 Load when page starts
+loadTechNews();
+
+// ⏰ Refresh every 30 minutes
+setInterval(loadTechNews, 1800000);
 </script>
+
 
 </body>
 </html>
+
 
 
 
