--- a/index.html
+++ b/index.html
@@ -158,9 +158,32 @@ loadTechNews();
 setInterval(loadTechNews, 1800000);
 </script>
 
+bakery-sidebar">
+  <img src="images/royalbyte-bakery.jpg" alt="Royal Byte Bakery Logo" class="bakery-sidebar-img">
 
+  <div class="bakery-sidebar-info">
+    <h3>🍰 ROYAL BYTE Bakery</h3>
+    <p>Freshly baked bread & pastries every day — taste the royal difference!</p>
+
+    <p><strong>📞 Call Us:</strong><br>
+      <a href="tel:+2349025773241">09025773241</a><br>
+      <a href="tel:+2348165019894">08165019894</a><br>
+      <a href="tel:+2347045827733">07045827733</a><br>
+      <a href="tel:+2349033314480">09033314480</a>
+    </p>
+
+    <p>
+      📍 <a href="https://www.google.com/maps?q=No.+1+Tabani+Street,+Kakuri+Bus+Stop,+Kaduna" target="_blank">
+        No. 1 Tabani Street, Kakuri Bus Stop, Kaduna
+      </a>
+    </p>
+
+    <a href="https://royalbytebakery.com" target="_blank" class="ad-button">Visit ROYAL BYTE</a>
+  </div>
+</aside>
 </body>
 </html>
+
 
 
 
