--- a/index.html
+++ b/index.html
@@ -1,107 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>VogueWave – Fashion Magazine</title>
-
-  <!-- External CSS -->
-  <link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Mustapha's Portfolio</title>
+    <link rel="stylesheet" href="style.css" />
 </head>
 <body>
+    <header>
+        <h1>Mustapha Salawu</h1>
+        <p>Athlete • Virtual Assistant • Frontend Developer • Traveler</p>
+    </header>
 
-  <div class="container">
-
-  
-    <section class="cover">
-      <div>
-        <span class="badge">ISSUE 07 • 2025</span>
-        <h1>Future of Fashion: Bold, Minimal, Fearless.</h1>
-        <p>Your exclusive guide to this season’s most influential runway looks, designers, and trends reshaping style culture.</p>
-
-        <div class="author">
-          <img src="https://via.placeholder.com/100" alt="Editor">
-          <div>
-            <strong>Amelia Ross</strong><br>
-            Chief Editor – VogueWave
-          </div>
+    <div class="container">
+        <div class="section">
+            <h2>About Me</h2>
+            <p>Hello! I'm Mustapha, a passionate virtual assistant and frontend developer. I enjoy helping clients stay organized, managing tasks efficiently, and building beautiful web pages. I'm also an athlete who loves traveling and making new friends. I bring discipline, communication, and consistency into everything I do.</p>
         </div>
 
-        <div class="cta">
-          <a href="#">Read Full Edition</a>
+        <div class="section">
+            <h2>Skills</h2>
+            <ul class="skills-list">
+                <li>Virtual Assistance (Email management, Scheduling, Research)</li>
+                <li>Frontend Development (HTML, CSS, JavaScript)</li>
+                <li>Project Management Tools (Trello, Notion, Asana)</li>
+                <li>Communication & Team Collaboration</li>
+                <li>Time Management & Organization</li>
+            </ul>
         </div>
-      </div>
-    </section>
 
+        <div class="section">
+            <h2>Projects</h2>
+            <ul class="projects-list">
+                <li>Personal Portfolio Website</li>
+                <li>Hotel Landing Page</li>
+                <li>Data Entry & Research Projects (Upwork)</li>
+            </ul>
+        </div>
 
-   
-    <section class="grid-3">
-      <div class="card">
-        <img src="https://via.placeholder.com/400x300" alt="Trends">
-        <h3>Top 10 Trends of 2025</h3>
-        <p>A curated breakdown of the trends celebrities and designers can’t get enough of.</p>
-      </div>
-
-      <div class="card">
-        <img src="https://via.placeholder.com/400x300" alt="Designer">
-        <h3>Inside the Mind of Nova Kline</h3>
-        <p>How the groundbreaking designer is redefining modern couture.</p>
-      </div>
-
-      <div class="card">
-        <img src="https://via.placeholder.com/400x300" alt="Streetwear">
-        <h3>Streetwear Reinvented</h3>
-        <p>The evolution of comfort-meets-luxury in everyday fashion.</p>
-      </div>
-    </section>
-
-
-
-    <section class="featured">
-      <div class="article">
-        <h2>The Rise of Digital Couture</h2>
-        <p><strong>By Lila Monroe</strong></p>
-        <p>Technology has become inseparable from the world of high fashion. From AR fitting rooms to AI-driven textile design, the digital era is shaping a unique future. Designers now operate at the intersection of creativity and engineering, crafting garments that adapt, illuminate, and interact with the wearer’s environment.</p>
-        <p>With sustainability and innovation leading the charge, digital couture promises a new era where fashion is smarter, greener, and more personal than ever.</p>
-      </div>
-
-      <div class="side">
-        <img src="https://via.placeholder.com/300x450" alt="Feature">
-      </div>
-    </section>
-
-
-   
-    <h2 style="margin-top:40px;">Lookbook Highlights</h2>
-    <section class="lookbook">
-      <img src="https://via.placeholder.com/500x600" alt="Look 1">
-      <img src="https://via.placeholder.com/500x600" alt="Look 2">
-      <img src="https://via.placeholder.com/500x600" alt="Look 3">
-      <img src="https://via.placeholder.com/500x600" alt="Look 4">
-    </section>
-
-
- 
-    <section class="quote">
-      <blockquote>
-        “Fashion is the art of expressing who you are before you even speak.”
-      </blockquote>
-      <cite>— Selena Voss, Fashion Icon</cite>
-    </section>
-
-
- 
-    <section class="subscribe">
-      <input type="email" placeholder="Enter your email">
-      <button>Subscribe</button>
-    </section>
+        <div class="section">
+            <h2>Contact</h2>
+            <p>Email: your-email@example.com</p>
+            <p>LinkedIn: linkedin.com/in/yourprofile</p>
+        </div>
+    </div>
 
     <footer>
-      © 2025 VogueWave Magazine. All Rights Reserved.
+        <p>© 2025 Mustapha Salawu</p>
     </footer>
-
-  </div>
-
 </body>
 </html>
 
