--- a/index.html
+++ b/index.html
@@ -40,8 +40,9 @@
 
         <div class="section">
             <h2>Contact</h2>
-            <p>Email: your-email@example.com</p>
-            <p>LinkedIn: linkedin.com/in/yourprofile</p>
+          <p>Email: <a href="mailto:josey6kmt@gmail.com">josey6kmt@gmail.com</a></p>
+<p>LinkedIn: <a href="https://www.linkedin.com/in/mustapha-salawu-b26777384">linkedin.com/in/mustapha-salawu-b26777384</a></p>
+
         </div>
     </div>
 
@@ -50,4 +51,5 @@
     </footer>
 </body>
 </html>
+
 
