--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <header>
+        <img src="mustapha.jpg" alt="Mustapha Salawu" style="width:150px; height:150px; border-radius:50%; object-fit:cover; margin-bottom:15px;">
         <h1>Mustapha Salawu</h1>
         <p>Athlete • Virtual Assistant • Frontend Developer • Traveler</p>
     </header>
@@ -51,5 +52,6 @@
     </footer>
 </body>
 </html>
+
 
 
